[package]
name = "rawsocket_helper"
version = "0.1.3"
authors = ["wugifer <wugifer@>"]
edition = "2018"
description = "use rawsocket send/recv tcp packet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wugifer/rawsocket-helper"
documentation = "https://docs.rs/rawsocket-helper/"


[dependencies]
anyhow             = "~1.0"
byteorder          = "~1.4"
cidr-utils         = "~0.5"
ipnetwork          = "~0.18"
pnet               = "~0.28"
python_comm        = "~0.1"
python_comm_macros = "~0.1"
rand               = "~0.8"

[target.'cfg(target_os = "linux")'.dependencies]
sudo = { version = "~0.6" }

[target.'cfg(target_os = "windows")'.dependencies]
pcap   = { version = "~0.8" }
winapi = { version = "~0.3", features = [ "handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default" ] }
